@@ -1,13 +1,15 @@
 #include "framework.h"
 #include "Renderer/Renderer11.h"
+
 #include "Game/camera.h"
 #include "Game/effects/tomb4fx.h"
-#include "Specific/clock.h"
 #include "Math/Math.h"
-#include "Renderer/Utils.h"
-#include "VertexBuffer/VertexBuffer.h"
-#include "RenderView/RenderView.h"
 #include "Renderer/RendererRectangle.h"
+#include "Renderer/RenderView/RenderView.h"
+#include "Renderer/Utils.h"
+#include "Renderer/VertexBuffer/VertexBuffer.h"
+#include "Scripting/Include/Flow/ScriptInterfaceFlowHandler.h"
+#include "Specific/clock.h"
 
 namespace TEN::Renderer
 {
@@ -275,6 +277,11 @@ namespace TEN::Renderer
 	void Renderer11::BindTexture(TEXTURE_REGISTERS registerType, TextureBase* texture, SAMPLER_STATES samplerType)
 	{
 		m_context->PSSetShaderResources((UINT)registerType, 1, texture->ShaderResourceView.GetAddressOf());
+
+		if (g_GameFlow->IsPointFilterEnabled() && samplerType != SAMPLER_SHADOW_MAP)
+		{
+			samplerType = SAMPLER_POINT_WRAP;
+		}
 
 		ID3D11SamplerState* samplerState = nullptr;
 		switch (samplerType)  
