@@ -30,6 +30,7 @@ public:
 
 	virtual bool IsFlyCheatEnabled() const = 0;
 	virtual bool IsMassPickupEnabled() const = 0;
+	virtual bool IsPointFilterEnabled() const = 0;
 	virtual bool IsLaraInTitleEnabled() const = 0;
 	virtual bool HasCrawlExtended() const = 0;
 	virtual bool HasCrouchRoll() const = 0;
