@@ -86,6 +86,13 @@ Must be true or false
 */
 	tableFlow.set_function(ScriptReserved_EnableFlyCheat, &FlowHandler::EnableFlyCheat, this);
 
+/*** Enable or disable point texture filter.
+Must be true or false
+@function EnablePointFilter
+@tparam bool enabled true or false
+*/
+	tableFlow.set_function(ScriptReserved_EnablePointFilter, &FlowHandler::EnablePointFilter, this);
+
 /*** Enable or disable mass pickup.
 Must be true or false
 @function EnableMassPickup
@@ -414,6 +421,16 @@ bool FlowHandler::IsFlyCheatEnabled() const
 void FlowHandler::EnableFlyCheat(bool flyCheat)
 {
 	FlyCheat = flyCheat;
+}
+
+bool FlowHandler::IsPointFilterEnabled() const
+{
+	return PointFilter;
+}
+
+void FlowHandler::EnablePointFilter(bool pointFilter)
+{
+	PointFilter = pointFilter;
 }
 
 bool FlowHandler::IsMassPickupEnabled() const
